--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,4 @@
-huayra-icon-theme (0.2) wizy; urgency=low
-
-  * Nueva version los iconos de Huayra.
-
- -- Mauro Lizaur <mauro@debian.org>  Thu, 04 Oct 2012 03:06:36 -0300
-
-huayra-icon-theme (0.1) wizy; urgency=low
+huayra-icon-theme (1.0-1) wizy; urgency=low
 
   * Paquete inicial
 
