--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (2.0-1) wizy; urgency=low
+
+  * Nueva version los iconos de Huayra.
+
+ -- Mauro Lizaur <mauro@debian.org>  Thu, 04 Oct 2012 23:06:36 -0300
+
 huayra-icon-theme (1.5-1) wizy; urgency=low
 
   * Nueva version los iconos de Huayra.
