--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (2.5-1) wizy; urgency=low
+
+  * Nueva version los iconos de Huayra.
+
+ -- Mauro Lizaur <mauro@debian.org>  Thu, 05 Oct 2012 00:36:36 -0300
+
 huayra-icon-theme (2.0-1) wizy; urgency=low
 
   * Nueva version los iconos de Huayra.
