Nueva version de huayra-icon-theme: 3.0-1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (3.0-1) wizy; urgency=low
+
+  * Nueva version de los iconos de Huayra.
+
+ -- Mauro Lizaur <mauro@debian.org>  Tue, 09 Oct 2012 12:09:47 -0300
+
 huayra-icon-theme (2.5-2) wizy; urgency=low
 
   * FODLER > FOLDER en debian/links.
