--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (3.5-1) wizy; urgency=low
+
+  * Nueva version de los iconos de Huayra.
+
+ -- Mauro Lizaur <mauro@debian.org>  Thu, 11 Oct 2012 18:28:04 -0300
+
 huayra-icon-theme (3.0-1) wizy; urgency=low
 
   * Nueva version de los iconos de Huayra.
