ahora hay dos temeas: huayra-icon-theme y huayra-icon-theme-alternativo

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+huayra-icon-theme (4.0-1) wizy; urgency=low
+
+  * Ahora huayra-icon-theme entrega dos variantes:
+	huayra-icon-theme
+	huayra-icon-theme-alternativo
+
+ -- Mauro Lizaur <mauro@debian.org>  Thu, 11 Oct 2012 18:28:04 -0300
+
 huayra-icon-theme (3.6-66) wizy; urgency=low
 
   * Solo para que los iconos tengan cierta armonia.
