--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
 huayra-icon-theme (4.0-1) wizy; urgency=low
 
   * Ahora huayra-icon-theme entrega dos variantes:
-	huayra-icon-theme
-	huayra-icon-theme-alternativo
+    - huayra-icon-theme
+    - huayra-icon-theme-alternativo
 
- -- Mauro Lizaur <mauro@debian.org>  Thu, 11 Oct 2012 18:28:04 -0300
+ -- Mauro Lizaur <mauro@debian.org>  Wed, 17 Oct 2012 02:48:24 -0300
 
 huayra-icon-theme (3.6-66) wizy; urgency=low
 
