--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+huayra-icon-theme (4.5-1) UNRELEASED; urgency=low
+
+  * Nueva version de los iconos de Huayra.
+    Ahora con iconos de navegador y mail
+
+ -- Mauro Lizaur <mauro@debian.org>  Tue, 23 Oct 2012 18:49:53 -0300
+
 huayra-icon-theme (4.0-1) wizy; urgency=low
 
   * Ahora huayra-icon-theme entrega dos variantes:
