--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-huayra-icon-theme (4.5-1) UNRELEASED; urgency=low
+huayra-icon-theme (4.5-1) testing; urgency=low
 
   * Nueva version de los iconos de Huayra.
     Ahora con iconos de navegador y mail
