Agrego referencias a huayra-icon-theme-fresco-verde y huayra-icon-theme-mayo

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+huayra-icon-theme (5.0-1) testing; urgency=low
+
+  * Nueva version de los iconos de Huayra.
+  * Tema de icono Mayo.
+  * Tema de icono Fresco Verde.
+  * Agrego build-deps faltantes.
+
+ -- Mauro Lizaur <mauro@debian.org>  Thu, 29 Nov 2012 15:25:08 -0300
+
 huayra-icon-theme (4.5-1) testing; urgency=low
 
   * Nueva version de los iconos de Huayra.
