--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+huayra-icon-theme (5.5-1) UNRELEASED; urgency=low
+
+  * Nueva version de los iconos de Huayra.
+  * Fix en los index.theme para que liste todos los directorios.
+
+ -- Mauro Lizaur <mauro@debian.org>  Fri, 30 Nov 2012 18:14:58 -0300
+
 huayra-icon-theme (5.0-1) testing; urgency=low
 
   * Nueva version de los iconos de Huayra.
