--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (6.5-1) testing; urgency=low
+
+  * Agrego "theme" huayra-apps.
+
+ -- Mauro Lizaur <mauro@debian.org>  Tue, 11 Dec 2012 00:29:02 -0300
+
 huayra-icon-theme (6.0-1) testing; urgency=low
 
   * Nueva version de los iconos de Huayra. [2]
