--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (7.0-1) testing; urgency=low
+
+  * Nueva version de los iconos de Huayra. [3]
+
+ -- Mauro Lizaur <mauro@debian.org>  Fri, 28 Dec 2012 01:50:53 -0300
+
 huayra-icon-theme (6.5-1) testing; urgency=low
 
   * Agrego "theme" huayra-apps.
