--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,16 @@
-huayra-icon-theme (7.0-1) testing; urgency=low
+huayra-icon-theme (7.5-1) testing; urgency=low
 
-  * Nueva version de los iconos de Huayra. [3]
+  * Nueva version de los iconos de Huayra. [4]
 
  -- Mauro Lizaur <mauro@debian.org>  Fri, 28 Dec 2012 01:50:53 -0300
+
+huayra-icon-theme (7.0-1) testing; urgency=low
+
+  * Nueva version de los iconos de Huayra.
+  * Corrijo error en huayra-icon-theme-all.
+    (Gracias Ricardo Morales)
+
+ -- Mauro Lizaur <mauro@debian.org>  Fri, 14 Dec 2012 14:09:03 -0300
 
 huayra-icon-theme (6.5-1) testing; urgency=low
 
