--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+huayra-icon-theme (8.0) testing; urgency=low
+
+  * sacando tema huayra-apps y huayra-alternativo
+  * cambio de mantenedor 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Fri, 11 Jan 2013 01:24:10 -0300
+
 huayra-icon-theme (7.5-1) testing; urgency=low
 
   * Nueva version de los iconos de Huayra. [4]
