--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.1) testing; urgency=low
+
+  * pasado el paquete a nativo 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Mon, 14 Jan 2013 18:10:53 -0300
+
 huayra-icon-theme (8.0) testing; urgency=low
 
   * sacando tema huayra-apps y huayra-alternativo
