--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+huayra-icon-theme (8.2) testing; urgency=low
+
+  * migracion a inkscape (en el pbuilder funciona los tamaños)
+  * conflicto con huayra-apps-icons 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Tue, 15 Jan 2013 03:08:13 -0300
+
 huayra-icon-theme (8.1) testing; urgency=low
 
   * pasado el paquete a nativo 
