--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.3) testing; urgency=low
+
+  * conflicto con huayra-theme-icon-alternativo 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Tue, 15 Jan 2013 03:32:02 -0300
+
 huayra-icon-theme (8.2) testing; urgency=low
 
   * migracion a inkscape (en el pbuilder funciona los tamaños)
