--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.4) testing; urgency=low
+
+  * lintian friendly! 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Wed, 16 Jan 2013 12:33:19 -0300
+
 huayra-icon-theme (8.3) testing; urgency=low
 
   * conflicto con huayra-theme-icon-alternativo 
