--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.5) testing; urgency=low
+
+  * cambio de tamaño minimo de iconos cuando se genera index.theme 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Mon, 21 Jan 2013 16:20:13 -0300
+
 huayra-icon-theme (8.4) testing; urgency=low
 
   * lintian friendly! 
