--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.6) testing; urgency=low
+
+  * Nuevos iconos
+
+ -- Miguel Angel Garcia <miguel.garcia@gmail.com>  Tue, 12 Feb 2013 02:16:21 -0300
+
 huayra-icon-theme (8.5) testing; urgency=low
 
   * cambio de tamaño minimo de iconos cuando se genera index.theme 
