--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.7) testing; urgency=low
+
+  * Agregando iconos faltantes
+
+ -- Miguel Angel Garcia <miguel.garcia@gmail.com>  Wed, 13 Feb 2013 15:01:34 -0300
+
 huayra-icon-theme (8.6) testing; urgency=low
 
   * Nuevos iconos
