--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.8) testing; urgency=low
+
+  * Agregando iconos symbolic
+
+ -- Miguel Angel Garcia <miguel.garcia@gmail.com>  Fri, 15 Feb 2013 15:25:12 -0300
+
 huayra-icon-theme (8.7) testing; urgency=low
 
   * Agregando iconos faltantes
