--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.9) testing; urgency=low
+
+  * iconos para mate
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Thu, 21 Feb 2013 14:27:02 -0300
+
 huayra-icon-theme (8.8) testing; urgency=low
 
   * Agregando iconos symbolic
