nuevo iconos symbolic

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+huayra-icon-theme (8.12) testing; urgency=low
+
+  * nuevo iconos symbolic 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Wed, 06 Mar 2013 17:17:23 -0300
+
+huayra-icon-theme (8.11) testing; urgency=low
+
+  * agregado de iconos para mate 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Wed, 06 Mar 2013 15:55:46 -0300
+
 huayra-icon-theme (8.10) testing; urgency=low
 
   * accesibilidad y shutdow
