--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.13) testing; urgency=low
+
+  * icono de chat (Desktop) 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Thu, 07 Mar 2013 17:24:44 -0300
+
 huayra-icon-theme (8.12) testing; urgency=low
 
   * nuevo iconos symbolic 
