--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.14) testing; urgency=low
+
+  * correccion iconos con transparencia 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Fri, 08 Mar 2013 16:18:09 -0300
+
 huayra-icon-theme (8.13) testing; urgency=low
 
   * icono de chat (Desktop) 
