--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.15) testing; urgency=low
+
+  * mas iconos nuevos para completar el tema
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Wed, 13 Mar 2013 14:32:14 -0300
+
 huayra-icon-theme (8.14) testing; urgency=low
 
   * correccion iconos con transparencia 
