--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+huayra-icon-theme (8.15+nmu1) UNRELEASED; urgency=low
+
+  * Non-maintainer upload.
+  * corregí los íconos que habian quedado con fondo opaco 
+
+ -- Julia Palandri <julia.palandri@gmail.com>  Wed, 20 Mar 2013 14:59:45 -0300
+
 huayra-icon-theme (8.15) testing; urgency=low
 
   * mas iconos nuevos para completar el tema
