--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-huayra-icon-theme (8.15+nmu1) UNRELEASED; urgency=low
+huayra-icon-theme (8.15+nmu1) testing; urgency=low
 
   * Non-maintainer upload.
   * corregí los íconos que habian quedado con fondo opaco 
