--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.16) testing; urgency=low
+
+  * Iconos con mas contrantes para el fondo de conectar
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Thu, 18 Apr 2013 15:52:58 -0300
+
 huayra-icon-theme (8.15+nmu1) testing; urgency=low
 
   * Non-maintainer upload.
