--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.17) testing; urgency=low
+
+  * build 8.17 icono faltante
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Fri, 19 Apr 2013 12:15:06 -0300
+
 huayra-icon-theme (8.16) testing; urgency=low
 
   * Iconos con mas contrantes para el fondo de conectar
