fix de iconos para fondo oficial

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+huayra-icon-theme (8.17+nmu1) testing; urgency=low
+
+  * Non-maintainer upload.
+  * Mejoras en iconos por contraste con el fondo.
+
+ -- Miguel Angel Garcia <miguel.garcia@gmail.com>  Fri, 19 Apr 2013 16:02:36 -0300
+
 huayra-icon-theme (8.17) testing; urgency=low
 
   * build 8.17 icono faltante
