--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.18) testing; urgency=low
+
+  * temas nuevos de iconos
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Wed, 05 Jun 2013 14:40:06 -0300
+
 huayra-icon-theme (8.17+nmu1) testing; urgency=low
 
   * Non-maintainer upload.
