--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.19) testing; urgency=low
+
+  *  nuevos iconos
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Wed, 05 Jun 2013 15:48:04 -0300
+
 huayra-icon-theme (8.18) testing; urgency=low
 
   * temas nuevos de iconos
