--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.20) testing; urgency=low
+
+  * fix de iconos de categorias
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Thu, 06 Jun 2013 11:10:43 -0300
+
 huayra-icon-theme (8.19) testing; urgency=low
 
   *  nuevos iconos
