--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.21) testing; urgency=low
+
+  * nuevos iconos 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Wed, 17 Jul 2013 20:05:47 -0300
+
 huayra-icon-theme (8.20) testing; urgency=low
 
   * fix de iconos de categorias
