--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.22) testing; urgency=low
+
+  * nuevos iconos de categorias
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Wed, 07 Aug 2013 11:48:18 -0300
+
 huayra-icon-theme (8.21) testing; urgency=low
 
   * nuevos iconos 
