--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.24) testing; urgency=low
+
+  * Más iconos para limbo y corrección de index.theme en huayra verde
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Wed, 18 Sep 2013 12:13:51 -0300
+
 huayra-icon-theme (8.23) testing; urgency=low
 
   * cambios del build del paquete
