--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.25) unstable; urgency=low
+
+  * completando mas iconos en los temas
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Fri, 01 Nov 2013 16:14:23 -0300
+
 huayra-icon-theme (8.24) testing; urgency=low
 
   * Más iconos para limbo y corrección de index.theme en huayra verde
