--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.26) unstable; urgency=low
+
+  * correccion de iconos
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Mon, 16 Dec 2013 16:10:57 -0300
+
 huayra-icon-theme (8.25) unstable; urgency=low
 
   * completando mas iconos en los temas
