--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.27) unstable; urgency=low
+
+  * correccion de iconos que se usan el gtk3
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Tue, 04 Feb 2014 14:05:05 -0300
+
 huayra-icon-theme (8.26) unstable; urgency=low
 
   * correccion de iconos
