--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+huayra-icon-theme (8.29) unstable; urgency=medium
+
+  * Update iconos de aplicaciones.
+
+ -- Mauro <mauro@krutt.org>  Mon, 21 Apr 2014 16:36:16 -0300
+
+huayra-icon-theme (8.28) unstable; urgency=medium
+
+  * Update iconos de aplicaciones.
+
+ -- Mauro <mauro@krutt.org>  Mon, 14 Apr 2014 13:22:31 -0300
+
 huayra-icon-theme (8.27) unstable; urgency=low
 
   * correccion de iconos que se usan el gtk3
