--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,15 @@
+huayra-icon-theme (8.30) unstable; urgency=medium
+
+  [ Ivan Hoffmann ]
+  * Icono biblioteca-huayra para todos los temas + iconos corregidos del menu
+  * Fixes varios en enlaces simbólicos y permisos de archivos
+
+ -- Mauro <mauro@krutt.org>  Fri, 16 May 2014 12:15:17 -0300
+
 huayra-icon-theme (8.29) unstable; urgency=medium
 
   * Update iconos de aplicaciones.
+  * Bump standard-version
 
  -- Mauro <mauro@krutt.org>  Mon, 21 Apr 2014 16:36:16 -0300
 
