--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.31) torbellino; urgency=low
+
+  * Se completaron los temas de iconos Violeta, Violeta v2, Mayo, Fresco Verde y Limbo. 
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Tue, 11 Nov 2014 13:01:52 -0300
+
 huayra-icon-theme (8.30) unstable; urgency=medium
 
   [ Ivan Hoffmann ]
