Agregando Huayra Liso al empaquetado para 3.0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.32) torbellino; urgency=low
+
+  * Se agregó Huayra Liso al empaquetado para Huayra 3. 
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Mon, 17 Nov 2014 13:23:55 -0300
+
 huayra-icon-theme (8.31) torbellino; urgency=low
 
   * Se completaron los temas de iconos Violeta, Violeta v2, Mayo, Fresco Verde y Limbo. 
