Incremento de versión. Iconos nuevos.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.34) torbellino; urgency=medium
+
+  * Incrementando versión. Iconos nuevos en Liso.
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Mon, 29 Dec 2014 16:09:14 -0300
+
 huayra-icon-theme (8.33) torbellino; urgency=low
 
   * Se corrió el script enlazador en Huayra Liso.
