Incremento de versión

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.35) torbellino; urgency=medium
+
+  * Incremento de versión.
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Mon, 19 Jan 2015 13:47:46 -0300
+
 huayra-icon-theme (8.34) torbellino; urgency=medium
 
   * Incrementando versión. Iconos nuevos en Liso.
