Incremento de versión

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 huayra-icon-theme (8.35) torbellino; urgency=medium
 
-  * Incremento de versión.
+  * Correcciones en tema de iconos Huayr Liso (Claudio "malefico" Andaur).
 
  -- Ivan Hoffmann <digital.h@gmail.com>  Mon, 19 Jan 2015 13:47:46 -0300
 
