Incremento de versión

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.37) torbellino; urgency=medium
+
+  * Iconos de dropbox y apps/gnome-util para Liso (Carolina Hortal)
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Mon, 09 Feb 2015 14:20:59 -0300
+
 huayra-icon-theme (8.36) torbellino; urgency=medium
 
   * Arreglos en index.theme de todos los temas para que hereden adwaita,
