Iconos para LibreOffice. Incremento de Versión

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.38) torbellino; urgency=medium
+
+  * Iconos para Libre Office (Claudio "malefico" Andaur).
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Mon, 23 Feb 2015 16:26:57 -0300
+
 huayra-icon-theme (8.37) torbellino; urgency=medium
 
   * Iconos de dropbox y apps/gnome-util para Liso (Carolina Hortal)
