--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.39) torbellino; urgency=medium
+
+  * Nuevos iconos de Huayra Mu, CV y Conectar Educativo (Caro Hortal)
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Thu, 26 Feb 2015 15:48:06 -0300
+
 huayra-icon-theme (8.38) torbellino; urgency=medium
 
   * Iconos para Libre Office (Claudio "malefico" Andaur).
