Correcciones en index.theme de Liso

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.40) torbellino; urgency=medium
+
+  * Correcciones en index.theme de Limbo con las definiciones de tamaño.
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Thu, 05 Mar 2015 14:58:19 -0300
+
 huayra-icon-theme (8.39) torbellino; urgency=medium
 
   * Nuevos iconos de Huayra Mu, CV y Conectar Educativo (Caro Hortal)
