Incremento de versión

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+huayra-icon-theme (8.41) torbellino; urgency=medium
+
+  * Fix de enlaces en mimetypes de Liso.
+    Fix de script enlazador.
+    Mas definiciones faltantes en Index.theme de Liso.
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Mon, 09 Mar 2015 13:03:49 -0300
+
 huayra-icon-theme (8.40) torbellino; urgency=medium
 
   * Correcciones en index.theme de Limbo con las definiciones de tamaño.
