Emprolijando temas Limbo y Liso. Fix en script enlazador.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+huayra-icon-theme (8.42) torbellino; urgency=medium
+
+  * Emprolijando temas Limbo y Liso.
+    Correcciones en enlazador.
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Thu, 19 Mar 2015 15:15:05 -0300
+
 huayra-icon-theme (8.41) torbellino; urgency=medium
 
   * Fix de enlaces en mimetypes de Liso.
