Completa la categoria mimetypes. Fix en script enlazador.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+huayra-icon-theme (8.43) torbellino; urgency=medium
+
+  * Completada la categoría mimetypes de Limbo.
+    Ajustes en script enlazador.
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Fri, 20 Mar 2015 11:58:14 -0300
+
 huayra-icon-theme (8.42) torbellino; urgency=medium
 
   * Emprolijando temas Limbo y Liso.
