Incremento de versión

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.44) torbellino; urgency=medium
+  [Carolina Hortal]
+  * Nuevos iconos para ir completando Huayra Accesible.
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Fri, 24 Apr 2015 10:56:07 -0300
+
 huayra-icon-theme (8.43) torbellino; urgency=medium
 
   * Completada la categoría mimetypes de Limbo.
