--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+huayra-icon-theme (8.45) torbellino; urgency=medium
+
+  [Carolina Hortal]
+  * Completando iconos de Huayra Accesible.
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Mon, 08 Jun 2015 14:54:02 -0300
+
 huayra-icon-theme (8.44) torbellino; urgency=medium
   [Carolina Hortal]
   * Nuevos iconos para ir completando Huayra Accesible.
