Agregando icono de huayra para menu.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.46) torbellino; urgency=medium
+
+  * Agregando icono de Huayra para el menú mas enlaces faltantes.
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Mon, 22 Jun 2015 14:25:02 -0300
+
 huayra-icon-theme (8.45) torbellino; urgency=medium
 
   [Carolina Hortal]
