Cambios en index.theme

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 huayra-icon-theme (8.46) torbellino; urgency=medium
 
   * Agregando icono de Huayra para el menú mas enlaces faltantes.
+    Cambios en index.theme para que tome todas las carpetas.
 
  -- Ivan Hoffmann <digital.h@gmail.com>  Mon, 22 Jun 2015 14:25:02 -0300
 
