--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.47) torbellino; urgency=medium
+
+  * Se agregaron varios iconos faltantes en Huayra Accesible y Liso.
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Mon, 29 Jun 2015 12:15:45 -0300
+
 huayra-icon-theme (8.46) torbellino; urgency=medium
 
   * Agregando icono de Huayra para el menú mas enlaces faltantes.
