Se agregan iconos faltantes del menu Huayra a Accesible

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.48) torbellino; urgency=medium
+
+  * Se agregan iconos faltantes del menu Huayra a Accesible.
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Tue, 30 Jun 2015 10:45:00 -0300
+
 huayra-icon-theme (8.47) torbellino; urgency=medium
 
   * Se agregaron varios iconos faltantes en Huayra Accesible y Liso.
