Agregando iconos para huayra-ocho

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.49) torbellino; urgency=medium
+
+  * Se agregan enlaces para corregir icono de Bluetooth.
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Tue, 15 Sep 2015 10:27:43 -0300
+
 huayra-icon-theme (8.48) torbellino; urgency=medium
 
   * Se agregan iconos faltantes del menu Huayra a Accesible.
