Incremento de version

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.50) torbellino; urgency=medium
+
+  * Primera version de paquete Huayra Ocho.
+
+ -- Ivan Hoffmann <digital.h@gmail.com>  Mon, 09 Nov 2015 13:21:12 -0300
+
 huayra-icon-theme (8.49) torbellino; urgency=medium
 
   * Se agregan enlaces para corregir icono de Bluetooth.
