Incremento de versión

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+huayra-icon-theme (8.51) torbellino; urgency=medium
+
+  [Claudio "malefico" Andaur]
+  [Carolina Hortal]
+  * Iconos faltantes en Huayra Liso
+    Mas iconos de Huayra Ocho
+
+ -- Iván Hoffmann <digital.h@gmail.com.ar>  Fri, 26 Feb 2016 09:24:34 -0300
+
 huayra-icon-theme (8.50) torbellino; urgency=medium
 
   * Primera version de paquete Huayra Ocho.
