Incremento de versión

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme (8.52) unstable; urgency=medium
+
+  * Modificaciones varias.
+
+ -- Iván Hoffmann <digital.h@gmail.com>  Wed, 02 Nov 2016 15:17:05 -0300
+
 huayra-icon-theme (8.51) torbellino; urgency=medium
 
   [Claudio "malefico" Andaur]
