Limpiando archivos backup y otros. Tema Huayra4: Icono de folder-videos faltante. Iconos de network.

--- a/huayra-4/debian/changelog
+++ b/huayra-4/debian/changelog
@@ -1,3 +1,15 @@
+huayra-icon-theme-huayra4 (0.12) unstable; urgency=medium
+
+  * Corrigiendo errores de Lintian. Descripcion en debian/control.
+
+ -- Claudio Andaur <malefico3d@gmail.com>  Tue, 29 Jan 2019 14:16:41 -0300
+
+huayra-icon-theme-huayra4 (0.11) unstable; urgency=medium
+
+  * Iconos de categorias + status + actions
+
+ -- Claudio Andaur <malefico3d@gmail.com>  Mon, 28 Jan 2019 15:44:58 -0300
+
 huayra-icon-theme-huayra4 (0.1) unstable; urgency=medium
 
   * Version inicial.
