Varios iconos mas. Chequear changelog

--- a/huayra-4/debian/changelog
+++ b/huayra-4/debian/changelog
@@ -1,3 +1,13 @@
+huayra-icon-theme-huayra4 (0.12d) unstable; urgency=medium
+
+  * Tema Huayra 4: actions/configuration_section.svg
+  * actions/desktop.svg, actions/edit-copy, actions/select-all, 
+  * actions/gnome-control-center, actions/system-shutdown
+  * apps/help.svg
+  * Sustitucion de duplicados con enlaces simbolicos
+
+ -- Claudio Andaur <malefico3d@gmail.com>  Thu, 04 Apr 2019 15:51:15 -0300
+
 huayra-icon-theme-huayra4 (0.12c) unstable; urgency=medium
 
   * Tema Huayra 4: status/iconos dialog*
