Just bump to test#

--- a/huayra-jm/debian/changelog
+++ b/huayra-jm/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme-jm (1.1) unstable; urgency=medium
+
+  * Mas iconos
+
+ -- Matias De lellis <mati86dl@gmail.com>  Fri, 26 Feb 2021 09:36:28 -0300
+
 huayra-icon-theme-jm (1.0) unstable; urgency=medium
 
   * Moviendo carpeta de instalacion de huayra-4 a Huayra4
