--- a/huayra-jm/debian/changelog
+++ b/huayra-jm/debian/changelog
@@ -1,3 +1,10 @@
+huayra-icon-theme-jm (1.2) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * Mas iconos
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Fri, 26 Feb 2021 19:29:03 -0300
+
 huayra-icon-theme-jm (1.1) unstable; urgency=medium
 
   * Mas iconos
