--- a/huayra-jm/debian/changelog
+++ b/huayra-jm/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme-jm (1.3) unstable; urgency=medium
+
+  * Mas iconos actulizados
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Thu, 22 Apr 2021 13:05:05 -0300
+
 huayra-icon-theme-jm (1.2) unstable; urgency=medium
 
   * Non-maintainer upload.
