--- a/huayra-jm/debian/changelog
+++ b/huayra-jm/debian/changelog
@@ -1,3 +1,9 @@
+huayra-icon-theme-jm (1.4) unstable; urgency=medium
+
+  * Nuevos iconos
+
+ -- Matias De lellis <mati86dl@gmail.com>  Tue, 22 Jun 2021 12:28:40 -0300
+
 huayra-icon-theme-jm (1.3) unstable; urgency=medium
 
   * Mas iconos actulizados
