--- a/huayra-ci/debian/changelog
+++ b/huayra-ci/debian/changelog
@@ -1,3 +1,15 @@
+huayra-icon-theme-ci (1.2) torbellino; urgency=medium
+
+  * Mas iconos...
+
+ -- Matias De lellis <mati86dl@gmail.com>  Wed, 29 Jun 2022 19:46:17 -0300
+
+huayra-icon-theme-ci (1.1) torbellino; urgency=medium
+
+  * Mas iconos.
+
+ -- Matias De lellis <mati86dl@gmail.com>  Wed, 08 Jun 2022 10:09:10 -0300
+
 huayra-icon-theme-ci (1.0) torbellino; urgency=medium
 
   * Nuevo tema conectar igualdad
